# slowExample

./: CHANGELOG.md  README.md  cabal.project  slowExample.cabal
app/: Main.hs
src/: T.hs  T1.hs  T12.hs  T2.hs
