cabal-version:      2.4
name:               slowExample
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             EMQX-YangM
maintainer:         yangm@emqx.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: T
                   , T1
                   , T2

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: base ^>=4.14.3.0
                 , random
                 , containers
                 , fused-effects
                 , fused-effects-random
                 , stm
                 , io-sim
                 , io-classes

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -O2

executable slowExample
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        slowExample

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:  -threaded
